tests/NormalTests/paczka1/fuzzy1/74904130.err
Error in line 4: IO0vyHJhAGv S920 12,9
Error in line 17: DYX S601 17,3
Error in line 18: lpDe A696 12,9
Error in line 23: lpDe S601 63,9
Error in line 27: DYX S920 36,5
